--- a/index.html
+++ b/index.html
@@ -113,5 +113,5 @@ Calculate download time"/>
 	<iframe width="100%" height="650px" frameborder="0" src="https://hamza1224.speedtestcustom.com"></iframe>
 </body>
 
-<iframe width="50%" height="340px" frameborder="0" src="https://hamza1224.speedtestcustom.com"></iframe>
+<iframe width="340px" height="340px" src="https://hamza1224.speedtestcustom.com"></iframe>
 </html>
