--- a/index.html
+++ b/index.html
@@ -111,5 +111,5 @@ Calculate download time"/>
 
 	</div>	
 
-<iframe width="50%" height="650px" frameborder="0" src="https://hamza1224.speedtestcustom.com"></iframe>
+<iframe width="340px" height="340px" frameborder="0" src="https://hamza1224.speedtestcustom.com"></iframe>
 </html>
