--- a/index.html
+++ b/index.html
@@ -111,5 +111,5 @@ Calculate download time"/>
 
 	</div>	
 
-<iframe width="340px" height="340px" frameborder="0" src="https://hamza1224.speedtestcustom.com"></iframe>
+<iframe style="border:1px solid gray;border-radius:7px;width:96%;margin:20px auto" frameborder="0" src="https://hamza1224.speedtestcustom.com"></iframe>
 </html>
