--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Calculate download time"/>
 		</p>
 
 		<p>
-			<button id="calculateButton"> =</button>
+			<button id="calculateButton">=</button>
 		</p>
 	</div>
 
@@ -111,5 +111,5 @@ Calculate download time"/>
 
 	</div>	
 
-<iframe id="speedtest" frameborder="0" src="https://hamza1224.speedtestcustom.com"></iframe>
+<iframe class="speedtest" frameborder="0" src="https://hamza1224.speedtestcustom.com"></iframe>
 </html>
