--- a/index.html
+++ b/index.html
@@ -111,5 +111,5 @@ Calculate download time"/>
 
 	</div>	
 
-<iframe width="50%" height="650px" src="https://hamza1224.speedtestcustom.com"></iframe>
+<iframe width="200px" height="400px" src="https://hamza1224.speedtestcustom.com"></iframe>
 </html>
