--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <meta name=viewport content="width=device-width, initial-scale=1">
 <meta name="format-detection" content="telephone=no">
 <title></title>
-  <meta name="Description" content="Download time calculator helps you to calculate the download time it takes to download a file based on your internet download speed/bandwidth.
-Calculate download time"/>
+  <meta name="Description" content=""/>
 <meta name="Keywords" content="download,time,calculate, Estimate,bandwidth,broadband,downloadspeed,speed,upload,upload time calculator">
 <link rel="stylesheet" type="" href="./pro 1/style.css">	
+<script data-ad-client="ca-pub-5709272849899120" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> 
 </head>
 <body>
 
