--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta name="Keywords" content="download,time,calculate, Estimate,bandwidth,broadband,downloadspeed,speed,upload,upload time calculator">
 <link rel="stylesheet" type="" href="./pro 1/style.css">	
 <script data-ad-client="ca-pub-5709272849899120" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<link rel="stylesheet" type="" h
+<link rel="stylesheet" type="" href="./fontawesome-free-5.15.2-web/css/all.css">
 </head>
 <body>
 
@@ -99,7 +99,8 @@
 		<div id="results_inner">
 			<p class="time">0</p>
 			<p class="">to download/upload <span class="size"></span> </p>
-			<p class="">at <span class="speed"></span>/sec</p>
+			<p class="">@ <span class="speed"></span>/sec</p>
+			<p class=""><i class="fas fa-exclamation-triangle"></i> if there is no results that means its eathier takes a very long time (more than 30000 year) or too short time (less than 7s)</p>
 		</div>
 
 
