--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 	<form onsubmit="return false">
 	<div id="speed">
+		<div id="section1">
 		<h3>Enter your download/upload speed</h3>
 
 		<p>
@@ -38,6 +39,8 @@
 			</select>
 		</p>
 
+			<a href="#section2" style="color: #FF6A3D; text-decoration: none;"><i class="fas fa-exclamation-triangle"></i> Click here if you dont know you internet Speed to test it</a>
+		</div>
 
 		<div>
 			
@@ -100,7 +103,7 @@
 			<p class="time">0</p>
 			<p class="">to download/upload <span class="size"></span> </p>
 			<p class="">@ <span class="speed"></span>/sec</p>
-			<p class=""><i class="fas fa-exclamation-triangle"></i> if there is no results that means its eathier takes a very long time (more than 30000 year) or too short time (less than 7s)</p>
+			<p class=""><i class="fas fa-exclamation-triangle"></i> if there isnt any result that means its eathier takes a very long time (more than 30000 year) or too short time (less than 7s) to download/upload the file</p>
 		</div>
 
 
@@ -112,6 +115,9 @@
 	</div>	
 
 <iframe width="100%" height="650px" frameborder="0" src="https://hamza1224.speedtestcustom.com"></iframe>
+<div class="main" id="section2">
+	<a href="#section1" style="display: none;">Click Me to Smooth Scroll to Section 2 Below</a>
+</div>
 
 </body>
 </html>
