--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <link rel="stylesheet" type="" href="./pro 1/style.css">	
 <script data-ad-client="ca-pub-5709272849899120" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <meta name="google-site-verification" content="JGR6gpfkiiz7XlB9hRuO08-Ub8HyUmnhhQ7Z8Wg17bw" />
-<link rel="stylesheet" type="" href="./fontawesome-free-5.15.2-web/css/all.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@1,200&display=swap" rel="stylesheet">
 </head>
 <body>
 
