--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 				<option value="10^3">Kbps</option>
 				<option value="10^6" selected>Mbps</option>
             	<option value="10^9">Gbps</option>
+				<option value="10^12">Tbps</option>
+				<option value="10^15">Pbps</option>
+				<option value="10^18">Ebps</option>
+				<option value="10^21">Zbps</option>
+				<option value="10^24">Ybps</option>
 
 			</select>
 		</p>
@@ -91,7 +96,7 @@
 			<p class="time">0</p>
 			<p class="">to download/upload <span class="size"></span> </p>
 			<p class="">@ <span class="speed"></span>/sec</p>
-			<p class=""><i class="fas fa-exclamation-triangle"></i> if there isnt any result that means its eathier takes a very long time (more than 30000 year) or too short time (less than 7s) to download/upload the file</p>
+			<p class=""><i class="fas fa-exclamation-triangle"></i> if there isnt any result that means its eathier takes a very long time (more than 30000 year) or too short time (less than 1s) to download/upload the file</p>
 		</div>
 
 
