--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
 
 <script src="./pro 1/main.js"></script>
 <h1 id="sitename">Download/Upload time calculater</h1>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- adhoriz -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5709272849899120"
+     data-ad-slot="8769401649"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		
 		<div class="desktopcenter">
 		<div class="content">
@@ -64,6 +76,17 @@
 		</div>
 	</div>
 
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- adhoriz -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5709272849899120"
+     data-ad-slot="8769401649"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	<div id="file">
 		<h3>Enter your file size</h3>
 		<p>
@@ -91,6 +114,17 @@
 
 	</form>
 
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- adhoriz -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5709272849899120"
+     data-ad-slot="8769401649"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	<div id="results">
 
 		<div id="results_inner">
@@ -103,6 +137,17 @@
 
 </div>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- adhoriz -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5709272849899120"
+     data-ad-slot="8769401649"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 
 
@@ -112,6 +157,16 @@
 <div class="main" id="section2">
 	<a href="#section1" style="display: none;">Click Me to Smooth Scroll to Section 2 Below</a>
 </div>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- adhoriz -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5709272849899120"
+     data-ad-slot="8769401649"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
