--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<form onsubmit="return false">
 	<div id="speed">
 		<div id="section1">
-		<h3>Enter your download/upload speed</h3>
+		<h3>Enter your download/upload speed <i class="fas fa-wifi"></i></h3>
 
 		<p>
 			<input id="internetSpeed_p1" type="button" value="+" onclick="internetSpeed.value = (parseInt(internetSpeed.value)+1).toFixed(2)">
@@ -88,7 +88,7 @@
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 	<div id="file">
-		<h3>Enter your file size</h3>
+		<h3>Enter your file size <i class="fas fa-folder"></i></h3>
 		<p>
 			<input id="internetSpeed_p1" type="button" value="+" onclick="fileSize.value = (parseInt(fileSize.value)+1).toFixed(2)">
 
