--- a/index.html
+++ b/index.html
@@ -168,5 +168,27 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+
+<div class="desktopcenter">
+	
+	<div class="content">
+		<div id="speed">
+			<h1>All the Data units</h1>
+<pre style="text-align:left;margin-left: 30px;font-size: 25px;font-family: 'Fira Sans', sans-serif;">
+b(bit)= 1 bit (1 or 0)
+B(Byte)= 8b
+KB(Kilobyte)= 1024B/ 10^3
+MB(Megabyte)= 1024KB/ 10^6
+GB(Gigabyte)= 1024MB/ 10^9
+TB(Terabyte)= 1024GB/ 10^12
+PB(Petabyte)= 1024TB/ 10^15
+EB(Exabyte)= 1024PB/ 10^18
+ZB(Zettabyte)= 1024EB/ 10^21
+YB(Yottabyte)= 1024ZB/ 10^24
+</pre>
+		</div>
+	</div>
+	
+</div>
 </body>
 </html>
