--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-
+<script src="./pro 1/others.js"></script>
 <script src="./pro 1/main.js"></script>
 <h1 id="sitename">Download/Upload time calculater</h1>
 
@@ -108,7 +108,7 @@
 		</p>
 
 		<p>
-			<button id="calculateButton">=</button>
+			<button id="calculateButton" style="border: #fff solid 3px;">=</button>
 		</p>
 	</div>
 
@@ -174,21 +174,68 @@
 	<div class="content">
 		<div id="speed">
 			<h1>All the Data units</h1>
-<pre style="text-align:left;margin-left: 30px;font-size: 25px;font-family: 'Fira Sans', sans-serif;">
-b(bit)= 1 bit (1 or 0)
-B(Byte)= 8b
-KB(Kilobyte)= 1024B/ 10^3
-MB(Megabyte)= 1024KB/ 10^6
-GB(Gigabyte)= 1024MB/ 10^9
-TB(Terabyte)= 1024GB/ 10^12
-PB(Petabyte)= 1024TB/ 10^15
-EB(Exabyte)= 1024PB/ 10^18
-ZB(Zettabyte)= 1024EB/ 10^21
-YB(Yottabyte)= 1024ZB/ 10^24
-</pre>
+<style> .p123{ text-align:left;margin-left: 30px;font-size: 25px;font-family: 'Fira Sans', sans-serif; }</style>
+<p class="p123">(bit)= 1 bit (1 or 0)</p>
+<p class="p123">B(Byte)= 8b</p>
+<p class="p123">KB(Kilobyte)= 1024B/ 10^3</p>
+<p class="p123">MB(Megabyte)= 1024KB/ 10^6</p>
+<p class="p123">GB(Gigabyte)= 1024MB/ 10^9</p>
+<p class="p123">TB(Terabyte)= 1024GB/ 10^12</p>
+<p class="p123">PB(Petabyte)= 1024TB/ 10^15</p>
+<p class="p123">EB(Exabyte)= 1024PB/ 10^18</p>
+<p class="p123">ZB(Zettabyte)= 1024EB/ 10^21</p>
+<p class="p123">YB(Yottabyte)= 1024ZB/ 10^24</p>
 		</div>
 	</div>
 	
 </div>
+<button onclick="topFunction()" id="scrollupbtn" title="Go to top"><i class="fas fa-arrow-circle-up"></i></button>
+<style>
+#scrollupbtn {
+  bottom: 20px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;  
+  display: none;
+  position: fixed;
+  margin-top: 650px;
+  right: 30px;
+  background-color:#fff;
+  color: #F4DB7D;
+  border-radius: 360px;
+  padding:0px;
+  font-weight:0;
+  width:50px;
+  height:50px;
+  font-size:45px;
+}
+
+#scrollupbtn:hover {
+  box-shadow:  0px 0px 5px 5px #F4DB7D;
+  -webkit-box-shadow: 0px 0px 5px 5px #F4DB7D;
+  -moz-box-shadow: 0px 0px 5px 5px #F4DB7D;
+}
+</style>
+<script>
+	var mybutton = document.getElementById("scrollupbtn");
+	
+	window.onscroll = function() {scrollFunction()};
+	
+	function scrollFunction() {
+	  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+		mybutton.style.display = "block";
+	  } else {
+		mybutton.style.display = "none";
+	  }
+	}
+	function topFunction() {
+	  document.body.scrollTop = 0;
+	  document.documentElement.scrollTop = 0;
+	}
+	</script>
+
 </body>
 </html>
