--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 		<div id="speed">
 			<h1>All the Data units</h1>
 <style> .p123{ text-align:left;margin-left: 30px;font-size: 25px;font-family: 'Fira Sans', sans-serif; }</style>
-<p class="p123">(bit)= 1 bit (1 or 0)</p>
+<p class="p123">b(bit)= 1 bit (1 or 0)</p>
 <p class="p123">B(Byte)= 8b</p>
 <p class="p123">KB(Kilobyte)= 1024B/ 10^3</p>
 <p class="p123">MB(Megabyte)= 1024KB/ 10^6</p>
