--- a/index.html
+++ b/index.html
@@ -18,14 +18,28 @@
 <body>
 <script src="./pro 1/others.js"></script>
 <script src="./pro 1/main.js"></script>
-
-<h1 id="sitename">Download/Upload time calculater</h1>
+<nav>
+	<input id="nav-toggle" type="checkbox">
+	<div class="logo">DownloadTime<strong>Calculator</strong></div>
+	<ul class="links">
+		<li><a href="#home">Speed test</a></li>
+		<li><a href="#about">Data units</a></li>
+		<li><a href="#work">Mpbs vs MB/s</a></li>
+		<li><a href="#projects">Network speed</a></li>
+		<li><a href="#contact">Others</a></li>
+	</ul>
+	<label for="nav-toggle" class="icon-burger">
+		<div class="line"></div>
+		<div class="line"></div>
+		<div class="line"></div>
+	</label>
+</nav>
 	
 		<div class="desktopcenter">
 		<div class="content">
 
 	<form onsubmit="return false">
-	<div id="speed">
+	<div id="speed" style="padding-top: 40px; margin-top: 80px;">
 		<div id="section1">
 		<h3>Enter your download/upload speed <i class="fas fa-wifi"></i></h3>
 
