--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			</select>
 		</p>
 
-			<a href="#section2" style="color: #FF6A3D; text-decoration: none;"><i class="fas fa-exclamation-triangle"></i> Click here if you dont know your internet Speed to test it</a>
+			<a href="#speedtestsec" style="color: #FF6A3D; text-decoration: none;"><i class="fas fa-exclamation-triangle"></i> Click here if you dont know your internet Speed to test it</a>
 		</div>
 
 		<div>
@@ -126,11 +126,12 @@
 
 	</div>	
 
-<iframe width="100%" height="650px" frameborder="0" src="https://hamza1224.speedtestcustom.com"></iframe>
-<div class="main" id="section2">
-	<a href="#section1" style="display: none;">Click Me to Smooth Scroll to Section 2 Below</a>
+<div class="main" id="speedtestsec">
+	<iframe width="100%" height="650px" frameborder="0" src="https://hamza1224.speedtestcustom.com"></iframe>
+
 </div>
 
+<a href="#section1" style="display: none;">Click Me to Smooth Scroll to Section 2 Below</a>
 
 <div class="desktopcenter">
 	
