--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
 
 
 	</div>	
-
-<div class="main" id="speedtestsec">
+<section id="speedtestsec"></section>
+<div class="main">
 	<iframe width="100%" height="650px" frameborder="0" src="https://hamza1224.speedtestcustom.com"></iframe>
-
 </div>
+
 
 <a href="#section1" style="display: none;">Click Me to Smooth Scroll to Section 2 Below</a>
 
