--- a/index.html
+++ b/index.html
@@ -152,36 +152,25 @@
 	</div>
 	
 </div>
-<button onclick="topFunction()" id="scrollupbtn" title="Go to top"><i class="fas fa-arrow-circle-up"></i></button>
-<style>
-#scrollupbtn {
-  bottom: 20px;
-  z-index: 99;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 15px;
-  border-radius: 4px;  
-  display: none;
-  position: fixed;
-  margin-top: 650px;
-  right: 30px;
-  background-color:#fff;
-  color: #F4DB7D;
-  border-radius: 360px;
-  padding:0px;
-  font-weight:0;
-  width:50px;
-  height:50px;
-  font-size:45px;
-}
+<div class="desktopcenter">
+	
+	<div class="content">
+		<div id="speed">
+			<h1>Different Connections speed</h1>
+<p class="p123">OLD Modern = 29Kbps</p>
+<p class="p123">2G = 40Kbps</p>
+<p class="p123">DSL Modern = Modern 56.6Kbps</p>
+<p class="p123">ADSL = from 512Kbps up to 24Mbps (512Kbps,1Mbps,8Mbps,24Mbps)</p>
+<p class="p123">3G = from 3Mbps up to 7.2Mbps</p>
+<p class="p123">LAN = from 10Mbps up to 100Mbps</p>
+<p class="p123">4G = form form 5Mbps up to 100Mbps</p>
+<p class="p123">5G = from 200Mbps up to 1000Mbps(1Gbps)</p>
+<p class="p123">Fiber optic = the maximum speed of the fiber optic is 10000 Mbps (10Gbps) (fiber optic speed depends on Your subscription, usuall internet providers offer speeds from 20Mbps up to 1000Mbps)</p>
+		</div>
+	</div>
+</div>
 
-#scrollupbtn:hover {
-  box-shadow:  0px 0px 5px 5px #F4DB7D;
-  -webkit-box-shadow: 0px 0px 5px 5px #F4DB7D;
-  -moz-box-shadow: 0px 0px 5px 5px #F4DB7D;
-}
-</style>
+<button onclick="topFunction()" id="scrollupbtn" title="Go to top"><i class="fas fa-arrow-circle-up"></i></button>
 <script>
 	var mybutton = document.getElementById("scrollupbtn");
 	
