--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 			<h1>Different Connections speed</h1>
 <p class="p123">OLD Modern = 29Kbps</p>
 <p class="p123">2G = 40Kbps</p>
-<p class="p123">DSL Modern = Modern 56.6Kbps</p>
+<p class="p123">DSL Modern = 56.6Kbps</p>
 <p class="p123">ADSL = from 512Kbps up to 24Mbps (512Kbps,1Mbps,8Mbps,24Mbps)</p>
 <p class="p123">3G = from 3Mbps up to 7.2Mbps</p>
 <p class="p123">LAN = from 10Mbps up to 100Mbps</p>
