--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<input id="nav-toggle" type="checkbox">
 	<div class="logo">DownloadTime<strong>Calculator</strong></div>
 	<ul class="links">
-		<li><a href="#home">Speed test</a></li>
+		<li><a href="#speedtestsec">Speed test</a></li>
 		<li><a href="#about">Data units</a></li>
 		<li><a href="#work">Mpbs vs MB/s</a></li>
 		<li><a href="#projects">Network speed</a></li>
@@ -131,7 +131,7 @@
 </div>
 
 
-<a href="#section1" style="display: none;">Click Me to Smooth Scroll to Section 2 Below</a>
+<a href="#section1" style="display: none;"></a>
 
 <div class="desktopcenter">
 	
