--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 	<div class="logo">DownloadTime<strong>Calculator</strong></div>
 	<ul class="links">
 		<li><a href="#speedtestsec">Speed test</a></li>
-		<li><a href="#about">Data units</a></li>
-		<li><a href="#work">Mpbs vs MB/s</a></li>
-		<li><a href="#projects">Network speed</a></li>
-		<li><a href="#contact">Others</a></li>
+		<li><a href="#Dataunitssec">Data units</a></li>
+		<li><a href="#mbpssec">Mpbs vs MB/s</a></li>
+		<li><a href="#connectsec">Connections speed</a></li>
+		<li><a href="#otherssec">Others</a></li>
 	</ul>
 	<label for="nav-toggle" class="icon-burger">
 		<div class="line"></div>
@@ -131,10 +131,10 @@
 </div>
 
 
-<a href="#section1" style="display: none;"></a>
+<a href="" style="display: none;"></a>
 
 <div class="desktopcenter">
-	
+	<section id="Dataunitssec"></section>
 	<div class="content">
 		<div id="speed">
 			<h1>All the Data units</h1>
@@ -153,7 +153,22 @@
 	
 </div>
 <div class="desktopcenter">
-	
+	<section id="mbpssec"></section>
+	<div class="content">
+		<div id="speed">
+			<h1>Mbps vs MB/s</h1>
+<p class="p123">A Lot of people may not know the difference between Mbps and MB/s, Mbps stands for Megabit per second but MB/s stands for Megabyte per second, (Byte > Bit)</p>
+<p class="p123">To convert from Megabit to Megabyte Divide the number by 8 and to convert form Megabyte to Megabit Multiply the number by 8</p>
+<p class="p123" style="text-align: center; color: #F4DB7D;font-size: x-large;"><b>Example :</b></p>
+<p class="p123" style="text-align:center;"><B>20Mbps</B> <i class="fas fa-divide"></i><b> 8 <i class="fas fa-equals"></i> 2.5MB/s</b> </p>
+<p class="p123" style="text-align: center;"><b>5Mb/s </b><i class="fas fa-times"></i><b> 8 <i class="fas fa-equals"></i> 40Mbps</b> </p>
+<p class="p123">Same thing with all the another data units (Kbps,KB/s,Gbps,GB/s,Tbps,TB/s,etc)</p>
+		</div>
+	</div>
+</div>
+
+<div class="desktopcenter">
+	<section id="connectsec"></section>
 	<div class="content">
 		<div id="speed">
 			<h1>Different Connections speed</h1>
@@ -169,7 +184,15 @@
 		</div>
 	</div>
 </div>
-
+<div class="desktopcenter">
+	<section id="otherssec"></section>
+	<div class="content">
+		<div id="speed">
+			<h1>Others</h1>
+<p class="p123" style="text-align: center;"><b>Soon...</b></p>
+		</div>
+	</div>
+</div>
 <button onclick="topFunction()" id="scrollupbtn" title="Go to top"><i class="fas fa-arrow-circle-up"></i></button>
 <script>
 	var mybutton = document.getElementById("scrollupbtn");
