--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8"> 
 <meta name=viewport content="width=device-width, initial-scale=1">
 <meta name="format-detection" content="telephone=no">
-<title>downloadtimecalculate</title>
+<title>downloadtimecalculater</title>
   <meta name="Description" content=""/>
 <meta name="Keywords" content="download,time,calculate, Estimate,bandwidth,broadband,downloadspeed,speed,upload,upload time calculator">
 <link rel="stylesheet" type="" href="./pro 1/style.css">	
@@ -195,6 +195,24 @@
 		</div>
 	</div>
 </div>
+<div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
 
+    var disqus_config = function () {
+    this.page.url = 'https://downloadtimecalculator.netlify.app/';  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = 'downloadtimecalculater'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://downloadtime-calculator.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </body>
 </html>
