--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		<li><a href="#mbpssec">Mpbs vs MB/s</a></li>
 		<li><a href="#connectsec">Connections speed</a></li>
 		<li><a href="#otherssec">Others</a></li>
+		<li><a href="#asksec">Ask the community</a></li>
 	</ul>
 	<label for="nav-toggle" class="icon-burger">
 		<div class="line"></div>
@@ -196,14 +197,11 @@
 	</div>
 </div>
 <div id="disqus_thread"></div>
+<section id="asksec"></section>
 <script>
-    /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-
     var disqus_config = function () {
-    this.page.url = 'https://downloadtimecalculator.netlify.app/';  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = 'downloadtimecalculater'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    this.page.url = 'https://downloadtimecalculator.netlify.app/';
+    this.page.identifier = 'Downloadtimecalculater'; 
     };
 
     (function() { // DON'T EDIT BELOW THIS LINE
