--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 <script>
     var disqus_config = function () {
     this.page.url = 'https://downloadtimecalculator.netlify.app/';
-    this.page.identifier = 'Downloadtimecalculater'; 
+    this.page.identifier = 'Downloadtime-calculater'; 
     };
 
     (function() { // DON'T EDIT BELOW THIS LINE
