--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
 	<section id="otherssec"></section>
 	<div class="content">
 		<div id="speed">
-			<h1>Others</h1>
-<p class="p123" style="text-align: center;"><b>Soon...</b></p>
+			<h1>More</h1>
+<p class="p123" style="text-align: center;"><a href="./pagetwo.html">Click here</a></p>
 		</div>
 	</div>
 </div>
