--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<li><a href="#Dataunitssec">Data units</a></li>
 		<li><a style="text-align: center;" href="#mbpssec">Difference between Mpbs and MB/s</a></li>
 		<li><a href="#connectsec">Connections speed</a></li>
-		<li><a href="#otherssec">Others</a></li>
+		<li><a href="#otherssec">More</a></li>
 		<li><a href="#asksec">Ask the community</a></li>
 	</ul>
 	<label for="nav-toggle" class="icon-burger">
