--- a/More.html
+++ b/More.html
@@ -7,6 +7,15 @@
     <title>More</title>
 </head>
 <body>
+    <div class="desktopcenter">
+	
+        <div class="content">
+            <div id="speed">
+                <h1>title</h1>
+    <p class="p123">text</p>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
