--- a/More.html
+++ b/More.html
@@ -7,12 +7,29 @@
     <title>More</title>
 </head>
 <body>
+    <section id="calcsec"></section>
+    <script src="./pro 1/others.js"></script>
+    <script src="./pro 1/main.js"></script>
+    <nav>
+        <input id="nav-toggle" type="checkbox">
+        <div class="logo">DownloadTime<strong>Calculator</strong></div>
+        <ul class="links">
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+        </ul>
+        <label for="nav-toggle" class="icon-burger">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </label>
+    </nav>    
     <div class="desktopcenter">
-	
         <div class="content">
             <div id="speed">
                 <h1>title</h1>
-    <p class="p123">text</p>
+    <p class="p123">hi</p>
             </div>
         </div>
     </div>
