--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 	<div class="content">
 		<div id="speed">
 			<h1>More</h1>
-<p class="p123" style="text-align: center;"><a href="./More.html">Click here</a></p>
+<p class="p123" style="text-align: center;"><a style="text-decoration: none;" href="./More.html"><button id="calculateButton" style="border: #fff solid 3px;">Click here</button></a></p>
 		</div>
 	</div>
 </div>
