--- a/More.html
+++ b/More.html
@@ -12,7 +12,7 @@
     <script src="./pro 1/main.js"></script>
     <nav>
         <input id="nav-toggle" type="checkbox">
-        <div class="logo">DownloadTime<strong>Calculator</strong></div>
+        <div class="logo"><strong>DownloadCalculator</strong> MORE</div>
         <ul class="links">
             <li><a href="#"></a></li>
             <li><a href="#"></a></li>
