--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8"> 
 <meta name=viewport content="width=device-width, initial-scale=1">
 <meta name="format-detection" content="telephone=no">
-<title>downloadtimecalculater</title>
-  <meta name="Description" content=""/>
+<title>downloadcalculater</title>
+  <meta name="Description" content="download,time,calculate, Estimate,bandwidth,broadband,downloadspeed,speed,upload,upload time calculator"/>
 <meta name="Keywords" content="download,time,calculate, Estimate,bandwidth,broadband,downloadspeed,speed,upload,upload time calculator">
 <link rel="stylesheet" type="" href="./pro 1/style.css">	
 <link rel="stylesheet" type="" href="./fontawesome-free-5.15.2-web/css/all.css">
@@ -19,7 +19,7 @@
 <script src="./pro 1/main.js"></script>
 <nav>
 	<input id="nav-toggle" type="checkbox">
-	<div class="logo">DownloadTime<strong>Calculator</strong></div>
+	<div class="logo"><strong>DownloadCalculator</strong></div>
 	<ul class="links">
 		<li><a href="#calcsec"><i class="fas fa-calculator"></i></a></li>
 		<li><a href="#speedtestsec">Speed test</a></li>
