--- a/more.html
+++ b/more.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./pro 1/style.css">
-    <title>More</title>
+    <title>downloadcalculater-more</title>
 </head>
 <body>
     <section id="calcsec"></section>
