--- a/more.html
+++ b/more.html
@@ -13,7 +13,7 @@
     <script src="./pro 1/main.js"></script>
     <nav>
         <input id="nav-toggle" type="checkbox">
-        <div class="logo"><strong>DownloadCalculator</strong> MORE</div>
+        <div class="logo"><strong>DownloadCalculator</strong></div>
         <ul class="links">
             <li><a href="#"></a></li>
             <li><a href="#"></a></li>
