--- a/more.html
+++ b/more.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./pro 1/style.css">
-    <title>downloadcalculater-more</title>
+    <link rel="stylesheet" href="./fontawesome-free-5.15.2-web/css/all.css">
+    <title>downloadcalculater-help</title>
     <script data-ad-client="ca-pub-5709272849899120" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
@@ -16,10 +17,13 @@
         <input id="nav-toggle" type="checkbox">
         <div class="logo"><strong>DownloadCalculator</strong></div>
         <ul class="links">
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
+        <li><a href="./index.php"><i class="fas fa-home"></i></a></li>
+        <li><a href="./index.php"><i class="fas fa-calculator"></i></a></li>
+		<li><a href="./index.php#speedtestsec">Speed test</a></li>
+		<li><a href="./index.php#Dataunitssec">Data units</a></li>
+		<li><a style="text-align: center;" href="./index.php#mbpssec">Difference between Mpbs and MB/s</a></li>
+		<li><a href="./index.php#connectsec">Connections speed</a></li>
+		<li><a href="./index.php#asksec">Ask the community</a></li>
         </ul>
         <label for="nav-toggle" class="icon-burger">
             <div class="line"></div>
