--- a/help.html
+++ b/help.html
@@ -23,7 +23,7 @@
 		<li><a href="./index.php#Dataunitssec">Data units</a></li>
 		<li><a style="text-align: center;" href="./index.php#mbpssec">Difference between Mpbs and MB/s</a></li>
 		<li><a href="./index.php#connectsec">Connections speed</a></li>
-		<li><a href="./index.php#asksec">Ask the community</a></li>
+		<li><a href="./index.php#more">Ask the community</a></li>
         </ul>
         <label for="nav-toggle" class="icon-burger">
             <div class="line"></div>
