--- a/help.html
+++ b/help.html
@@ -13,29 +13,41 @@
     <section id="calcsec"></section>
     <script src="./pro 1/others.js"></script>
     <script src="./pro 1/main.js"></script>
-    <nav>
-        <input id="nav-toggle" type="checkbox">
-        <div class="logo"><strong>DownloadCalculator</strong></div>
-        <ul class="links">
-        <li><a href="./index.php"><i class="fas fa-home"></i></a></li>
-        <li><a href="./index.php"><i class="fas fa-calculator"></i></a></li>
-		<li><a href="./index.php#speedtestsec">Speed test</a></li>
-		<li><a href="./index.php#Dataunitssec">Data units</a></li>
-		<li><a style="text-align: center;" href="./index.php#mbpssec">Difference between Mpbs and MB/s</a></li>
-		<li><a href="./index.php#connectsec">Connections speed</a></li>
-		<li><a href="./index.php#more">Ask the community</a></li>
-        </ul>
-        <label for="nav-toggle" class="icon-burger">
-            <div class="line"></div>
-            <div class="line"></div>
-            <div class="line"></div>
-        </label>
-    </nav>    
+    <div id="navbar">
+		<input id="nav-toggle" style="display: none;" type="checkbox">
+		<h1><strong>DownloadCalculator</strong></h1>
+		<ul class="links">
+            <li><a href="./index.php"><i class="fas fa-home"></i></a></li>
+			<li><a href="./index.php#calcsec"><i class="fas fa-calculator"></i></a></li>
+			<li><a href="./index.php#speedtestsec">Speed test</a></li>
+			<li><a href="./index.php#Dataunitssec">All the Data units</a></li>
+			<li><a href="./index.php#mbpssec">Difference between Mbps and MB/s</a></li>
+			<li><a href="./index.php#connectsec">Different Connections speed</a></li>
+			<li><a href="./index.php#moresec">More</a></li>
+		</ul>
+		<label for="nav-toggle" class="icon-burger">
+			<div class="line"></div>
+			<div class="line"></div>
+			<div class="line"></div>
+		</label>
+	  </div>
+	  <script>
+		var prevScrollpos = window.pageYOffset;
+		window.onscroll = function() {
+		var currentScrollPos = window.pageYOffset;
+		  if (prevScrollpos > currentScrollPos) {
+			document.getElementById("navbar").style.top = "0";
+		  } else {
+			document.getElementById("navbar").style.top = "-55px";
+		  }
+		  prevScrollpos = currentScrollPos;
+		}
+        </script>
     <div class="desktopcenter">
         <div class="content">
             <div id="speed" style="margin-top: 80px;">
-                <h1>title</h1>
-    <p class="p123">hi</p>
+                <h1>HELP</h1>
+    <p class="p123">test</p>
             </div>
         </div>
     </div>
