--- a/optimize.html
+++ b/optimize.html
@@ -78,7 +78,7 @@ function myFunctionX(){
         <div class="content">
             <div id="speed">
                 <h1>1.Keep everything updated</h1>
-    <p class="p123">make sure that your os and drivers are runing on the latest version</p>
+    <p class="p123">make sure that your os and drivers are running on the latest version</p>
             </div>
         </div>
     </div>
@@ -118,7 +118,7 @@ function myFunctionX(){
         <div class="content">
             <div id="speed">
                 <h1>5.Defragmenting Your PC</h1>
-    <p class="p123">For windows users search for "Defragment and Optimize Drives"in the menu then analyze and optimize your drivers</p>
+    <p class="p123">For Windows users search for "Defragment and Optimize Drives" in the menu then analyze and optimize your drivers</p>
             </div>
         </div>
     </div>
@@ -136,7 +136,7 @@ function myFunctionX(){
     <div class="content">
         <div id="speed">
             <h1>7.Disable Mouse Acceleration</h1>
-<p class="p123">This is another tweak that doesn’t impact performance in any way, shape or form. But it does enhance the overall experience, and you’ll thank us for this one later. Mouse acceleration is a feature in Windows which moves the cursor depending on the speed of the mouse movements.</p>
+<p class="p123">This is another tweak that doesn’t impact performance in any way, shape, or form. But it does enhance the overall experience, and you’ll thank us for this one later. Mouse acceleration is a feature in Windows which moves the cursor depending on the speed of the mouse movements.</p>
         </div>
     </div>
 </div>
