--- a/upload.html
+++ b/upload.html
@@ -170,6 +170,15 @@ function myFunctionX(){
 	
 	<div class="content">
 		<div id="speed">
+			<h1>How to increase upload speed</h1>
+<p class="p123">In most broadband/internet connections, upload speed is often considerably slower than the download speed. This is because ISPs favor download speed over upload speed as most people use more download bandwidth than upload bandwidths. The only real way to increase upload speed would be to get into a new internet plan. Some ISPs have special plans favoring upload speeds</p>
+		</div>
+	</div>
+</div>
+<div class="desktopcenter">
+	
+	<div class="content">
+		<div id="speed">
 			<h1>More</h1>
 <p class="p123"><a href="./upload.html">Upload calculator</a></p>
 <p class="p123"><a href="./bandwidth-calculator.html">Bandwidth calculator</a></p>
