--- a/upload.html
+++ b/upload.html
@@ -180,7 +180,7 @@ function myFunctionX(){
 	<div class="content">
 		<div id="speed">
 			<h1>More</h1>
-<p class="p123"><a href="./upload.html">Upload calculator</a></p>
+<p class="p123"><a href="./index.php">DownloadCalculator</a></p>
 <p class="p123"><a href="./bandwidth-calculator.html">Bandwidth calculator</a></p>
 <p class="p123"><a href="./data-transfer.html">Data transfer calculator</a></p>
 <p class="p123"><a href="./Privacy-Policy.html">Privacy Policy</a></p>
