--- a/bandwidth-calculator.html
+++ b/bandwidth-calculator.html
@@ -174,6 +174,8 @@ function myFunctionX(){
 				<p class="p123"><a href="./upload.html">Upload calculator</a></p>
 	<p class="p123"><a href="./data-transfer.html">Data transfer calculator</a></p>
 	<p class="p123"><a href="./Privacy-Policy.html">Privacy Policy</a></p>
+	<p class="p123"><a href="./Terms-of-use.html">Terms of use</a></p>
+
 	
 			</div>
 		</div>
